# bugsplat-android

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle.kts
.github/workflows/: codeql.yml  tests.yml
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/bugsplat/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: bugsplat_utils.h
app/src/main/java/com/bugsplat/android/: AnrReporter.java  BugSplat.java  BugSplatBridge.java  BugSplatBridge.kt  CommitOptions.java  FeedbackClient.java  ReportUploader.java  SymbolUploader.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
example/: README.md  build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/res/drawable/: background_gradient.xml  bg_badge_connected.xml  bg_badge_demo.xml  bg_card.xml  bg_card_clickable.xml  bugsplat_logo.xml  dot_activity_crash.xml  dot_activity_error.xml  dot_activity_feedback.xml  dot_connected.xml  dot_disconnected.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
example/src/main/res/layout/: activity_main.xml  dialog_attribute.xml  dialog_feedback.xml  item_activity_row.xml  item_event_card.xml
example/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
example/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-all.sh  build-crashpad.sh  build-libcurl.sh
(+6 files in other folders)
